fix a bug where jumping level

--- a/Assets/WebGLTemplates/AirConsole-2020/shared_styles.css
+++ b/Assets/WebGLTemplates/AirConsole-2020/shared_styles.css
@@ -252,7 +252,7 @@ body {
   position: absolute;
   right: 1%;
   top: 10%;
-  transform: translate(-40%, 500%);
+  transform: translate(-40%, 400%);
   padding: 10px 20px 10px 20px;
 }
 
